# opencv

./: CMakeLists.txt  ReadME.md
include/: image_processor.h
src/: image_processor.cpp  main.cpp
